--- a/css/style.css
+++ b/css/style.css
@@ -1,107 +1,124 @@
-*     {
+* {
+  margin: 0;
+  padding: 0;
+  outline: none;
   box-sizing: border-box;
+  list-style: none;
+  text-decoration: none;
 }
+
+
+
 body {
   font: 15px/1.5 Arial, Helvetica, sans-serif;
   padding: 0;
   margin: 0;
-  background-color: #f4f4f4;
+  background:url('../img/index.jpg') no-repeat center;
+  background-size: cover;
+  
+  
 }
 
 .container{
-  width: 80%;
+  width: 95%;
   margin: auto;
+  display: flex;
   overflow: hidden;
+  justify-content: space-between;
 }
 
 
-
-ul{
-  margin: 0;
-  padding: 0;
-}
-
-/* Header */
 
 header{
-  background:#32a0c2;
-  color: #ffffff;
+  display: flex;
   padding-top: 30px;
   height: 70px;
-  border-bottom: #32a0c2 3px solid;
-}
-
-header a{
-  color: #ffffff;
-  text-decoration: none;
-  text-transform: uppercase;
-  font-size: 16px;
-}
-
-header li{
-
-  display: inline;
-  padding: 0 100px 0 100px;
-}
-
- 
-
-header .highlight {
-  color: #32a0c2;
-  font-weight: bold;
-}
-
-
-/* Showcase */
-
-#showcase {
-  min-height: 400px;
-  background:url('../img/hip.jpg') no-repeat center;
-  background-size: cover;
-  text-align: center;
-  color: hsl(0, 23%, 9%);
-}
-
-#showcase h1{
-  margin-top: 100px;
-  font-size: 55px;
-  margin-bottom: 10px;
-}
-
-#showcase p{
-  font-size: 28px;
-}
-
-
-
-#boxes{
-
-  display: inline;
-}
-
-#boxes .box{
- 
-  text-align: center;
-  width: 30%;
-  padding: 10px;
-}
-
-footer{
-  padding: 20px;
-  margin-top: 20px;
-  color: #ffffff;
-  background-color: #32a0c2;
-  text-align: center;
-}
-
-
-
-  header {
-    padding-bottom: 20px;
-  }
-
-  #showcase h1 {
-    margin-top: 40px;
-  }
-
   
+}
+#icon{
+  width: 15px;
+  z-index: 1;
+}
+.sidebar{
+  position: fixed;
+  top: 0;
+  right: 0;
+  background-color: #34287cda;
+  width: 300px;
+  height: 800px;
+  
+  
+}
+.menu{
+position: absolute;
+top: 20%;
+left: 40%;
+
+}
+.menu-link {
+  font-family: "Baloo Da 2", serif;
+  font-size: 30px;
+  color: wheat;
+  position: relative;
+}
+.menu-item {
+  text-align: center;
+  
+}
+.bar{
+  background-color:white;
+  width: 50%;
+  margin: auto;
+  height: 600px;
+}
+.login{
+ max-width: 350px;
+width: 100%;
+height: 550px;
+background: #c2afaf9d;
+padding: 60px 45px;
+position: absolute;
+top: 50%;
+left: 50%;
+transform: translate(-50%,-50%);
+border-radius: 20px;
+
+
+}
+.login__button {
+  display: block;
+  padding: 1rem;
+  margin: 2rem 0;
+  background-color: #333392;
+  color: white;
+  font-weight: 600;
+  text-align: center;
+  border-radius: .5rem;
+  transition: .3s;
+}
+.login__input {
+  border: none;
+  outline: none;
+  font-weight: 700;
+  color:black;
+}
+.login__box {
+  display: grid;
+  grid-template-columns: max-content 1fr;
+  column-gap: .5rem;
+  padding: 1.125rem 1rem;
+  background-color: #3628282d;
+  margin-top: 1rem;
+  border-radius: .5rem;
+}
+.login__icon{
+  font-size: 1.5rem;
+  
+}
+.login__registre, .login__create {
+  
+  text-align: center;
+}
+.hu{
+  color: #333392;
+}
